--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -9,6 +9,6 @@ if(GEOGRAM_WITH_EXPLORAGRAM)
    add_subdirectory(exploragram)
 endif()   
 
-if(GEOGRAM_WITH_VORPALINE)
-   add_subdirectory(vorpaline)
-endif()
+#if(GEOGRAM_WITH_VORPALINE)
+#   add_subdirectory(vorpaline)
+#endif()
