Valgrind tests operational, switching back from manual to nightly trigger

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,9 +1,8 @@
 name: Nightly
 
 on:
-  workflow_dispatch
-#  schedule:
-#    - cron:  '0 4 * * *'
+  schedule:
+    - cron:  '0 4 * * *'
 
 jobs:
   DailyValgrind:
