--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -30,12 +30,13 @@ jobs:
         run: cd build; make doc-devkit-full
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.4.6
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FOLDER: ./build/doc/devkit-full/html
-          SINGLE_COMMIT: true
-          CLEAN: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: ./build/doc/devkit-full/html
+          single-commit: true
+          clean: true
 
 #        uses: peaceiris/actions-gh-pages@v3
 #        with:
