* it seems that DOS copy command does not accept to copy two files to   a directory (replaced with two copy commands) * activated 'clean' and 'single-commit' options to publish test reports   (we will see whether this wipes Doxygen ... but I think it will be OK)

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -85,7 +85,8 @@ jobs:
           build/Windows/tests/runpybot.bat `
           --config=${{ matrix.config }} --include=smoke tests/
           md reports
-          copy log.html report.html reports\
+          copy report.html reports\
+          copy log.html reports\
 
 ##############################################################################
 
@@ -104,8 +105,8 @@ jobs:
           branch: gh-pages
           folder: ./reports
           target-folder: reports/smoke-${{ matrix.name }}-${{ matrix.config }}
-#          single-commit: true
-#          clean: true
+          single-commit: true
+          clean: true
 
       - name: "Notify tests results"
         uses: andstor/file-existence-action@v2
