--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Publish tests results on gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
+        if: runner.os != 'Windows'
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
