--- a/tools/runpybot.bat.in
+++ b/tools/runpybot.bat.in
@@ -10,7 +10,12 @@ setlocal ENABLEEXTENSIONS
 
 call "%~dp0\testenv.bat" %*
 call robot %args%
-if %ERRORLEVEL% EQU 0 echo > TESTS_SUCCESS
+if %ERRORLEVEL% EQU 0 (
+   echo > TESTS_SUCCESS
+   copy %VORPALINE_SOURCE_DIR%\tools\ok.png robot_status.png
+) else (
+   copy %VORPALINE_SOURCE_DIR%\tools\ko.png robot_status.png
+)
 
 :: Some Jenkins plugins (like the Jenkins Performance Plugin) do not take
 :: testcase fullnames into account. Testnames with identical names but from
