Reactivate automatic trigger for nightly build

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,9 +1,8 @@
 name: Nightly
 
 on:
-#  schedule:
-#    - cron:  '0 4 * * *'
-  workflow_dispatch
+  schedule:
+    - cron:  '0 4 * * *'
 
 jobs:
   DailyValgrind:
