Removed ok.png/ko.png images in dashboard: images are *cached* by github, which means that changes will bot be taken into account. Replaced them with a robotframework logo (before I can figure out how to display status for each test but I'm unsure it is even possible...)

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -61,7 +61,7 @@ jobs:
           --include=daily_valgrind --with-valgrind \
           tests/
           mkdir reports
-          cp log.html report.html robot_status.png reports/
+          cp log.html report.html reports/
 
 ##############################################################################
 
