--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           build/${{ env.platform }}/tests/runpybot.sh --include=smoke tests/
           mkdir reports
-          cp log.html report.html robot_status.png reports/
+          cp log.html report.html reports/
 
 ################### Windows ##################################################
 
@@ -86,8 +86,7 @@ jobs:
           --config=${{ matrix.config }} --include=smoke tests/
           md reports
           copy report.html reports\
-          copy log.html reports\
-          copy robot_status.png reports\
+          copy log.html reports
 
 ##############################################################################
 
