rply as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "src/lib/geogram/third_party/libMeshb"]
 	path = src/lib/geogram/third_party/libMeshb
 	url = https://github.com/LoicMarechal/libMeshb.git
+[submodule "src/lib/geogram/third_party/rply"]
+	path = src/lib/geogram/third_party/rply
+	url = https://github.com/diegonehab/rply.git
