--- a/tools/testenv.sh.in
+++ b/tools/testenv.sh.in
@@ -1,10 +1,6 @@
 #!/bin/sh
-#
-#      \\V (O |R |P /A |L |I |N |E 
-# (C) Bruno Levy, INRIA - ALICE, 2012,2013
-#
-#   Confidential - proprietary software
-#
+# Template to set environment variables for the
+# non-regression testing framework.
 
 export VORPALINE_BUILD_CONFIG="@CMAKE_BUILD_TYPE.PATH@"
 export VORPALINE_SOURCE_DIR="@CMAKE_SOURCE_DIR.PATH@"
