Display generated report files (something is wrong, need to debug)

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -117,6 +117,7 @@ jobs:
       - name: Generate reports from artifacts
         run: |
           ./tools/generate_reports.sh
+          find reports -print
 
       - name: Publish reports on gh-pages
         uses: peaceiris/actions-gh-pages@v3
