regorganized directory structure for reports (so that different jobs can write in different directories)

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -117,11 +117,10 @@ jobs:
       - name: Generate reports from artifacts
         run: |
           ./tools/generate_reports.sh
-          find reports -print
 
       - name: Publish reports on gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./reports
-          destination_dir: reports
+          publish_dir: ./reports/smoke
+          destination_dir: reports/smoke
