--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build (Linux/MacOS)
         if: runner.os != 'Windows'
-        run: cd build/${{ env.platform }}; make -j2
+        run: cd build/${{ env.platform }}; make -j2 2>&1 |tee ../../build_log.txt
 
       - name: Tests (Linux/MacOs)
         if: runner.os != 'Windows'
@@ -75,7 +75,7 @@ jobs:
 
       - name: Build (Windows)
         if: runner.os == 'Windows'
-        run: cmake --build build/Windows --config ${{ matrix.config }}
+        run: cmake --build build/Windows --config ${{ matrix.config }} | tee -filepath build_log.txt
 
       - name: Tests (Windows)
         if: runner.os == 'Windows'
@@ -93,6 +93,7 @@ jobs:
             report.html
             log.html
             robot_status.png
+            build_log.txt
 
       - name: "Notify tests results"
         uses: andstor/file-existence-action@v2
