--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -56,11 +56,12 @@ jobs:
         run: |
           ./configure.sh
           echo "platform="\
-          `./configure.sh --show-platform`-${{ matrix.config }} >> $GITHUB_ENV
+            `./configure.sh --show-platform`-${{ matrix.config }} >> $GITHUB_ENV
 
       - name: Build (Linux/MacOS)
         if: runner.os != 'Windows'
-        run: cd build/${{ env.platform }}; make -j2 2>&1 |tee ../../build_log.txt
+        run: cd build/${{ env.platform }}; make -j2`
+          2>&1 |tee ../../build_log.txt
 
       - name: Tests (Linux/MacOs)
         if: runner.os != 'Windows'
@@ -75,13 +76,14 @@ jobs:
 
       - name: Build (Windows)
         if: runner.os == 'Windows'
-        run: cmake --build build/Windows --config ${{ matrix.config }} | tee -filepath build_log.txt
+        run: cmake --build build/Windows --config ${{ matrix.config }} `
+          | tee -filepath build_log.txt
 
       - name: Tests (Windows)
         if: runner.os == 'Windows'
         run: |
           build/Windows/tests/runpybot.bat `
-          --config=${{ matrix.config }} --include=smoke tests/
+            --config=${{ matrix.config }} --include=smoke tests/
 
 ##############################################################################
 
@@ -101,7 +103,9 @@ jobs:
           files: "TESTS_SUCCESS"
           fail: true
 
-  Reports:
+##############################################################################
+
+Reports:
     runs-on: ubuntu-latest
     if: always()
     needs: SmokeTests
