--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -60,8 +60,9 @@ jobs:
 
       - name: Build (Linux/MacOS)
         if: runner.os != 'Windows'
-        run: cd build/${{ env.platform }};\
-        make -j2 2>&1 |tee ../../build_log.txt
+        run: |
+          cd build/${{ env.platform }};\
+          make -j2 2>&1 |tee ../../build_log.txt
 
       - name: Tests (Linux/MacOs)
         if: runner.os != 'Windows'
