- download-artifact action now unpacks all artifacts in "artifacts/" subdirectory. - adapted "generate_reports.sh" script to take that into account

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Get artifacts
         uses: actions/download-artifact@v3
         with:
-          path: reports
+          path: artifacts
 
       - name: Generate reports from artifacts
         run: |
