--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -44,7 +44,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
             sudo apt-get update
-            sudo apt-get install xorg-dev
+            sudo apt-get install xorg-dev valgrind
 
       - name: Configure (Linux/MacOS)
         run: |
