Fixed Reports that now depends on NightlyWithTool (instead of NightlyValgrind)

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -90,7 +90,7 @@ jobs:
   Reports:
     runs-on: ubuntu-latest
     if: always()
-    needs: NightlyValgrind
+    needs: NightlyWithTool
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
