gcovr output as xml instead of html (html generates HUGE files)

--- a/tools/runpybot.sh.in
+++ b/tools/runpybot.sh.in
@@ -24,6 +24,6 @@ fi
 
 if [ "$VORPALINE_WITH_GCOV" = 1 ]; then
     echo "Generating coverage report"
-#    gcovr --xml --output=coverage.xml --verbose -r $VORPALINE_SOURCE_DIR/src $VORPALINE_BUILD_DIR > coverage.log
-     gcovr --html --output=coverage.html --html-details --verbose -r $VORPALINE_SOURCE_DIR/src $VORPALINE_BUILD_DIR > coverage.log
+    gcovr --xml --output=coverage.xml --verbose -r $VORPALINE_SOURCE_DIR/src $VORPALINE_BUILD_DIR > coverage.log
+#     gcovr --html --output=coverage.html --html-details --verbose -r $VORPALINE_SOURCE_DIR/src $VORPALINE_BUILD_DIR > coverage.log
 fi
