--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04, macos-11, windows-2022]
         config: [Debug, Release]
+        index_size: [Standard, Gargantua]
         include:
           - os: macos-11
             name: macOS
@@ -65,7 +66,7 @@ jobs:
           make -j2 2>&1 |tee ../../build_log.txt
 
       - name: Tests (Linux/MacOs)
-        if: runner.os != 'Windows'
+        if: runner.os != 'Windows' && runner.index_size != 'Gargantua
         run: |
           build/${{ env.platform }}/tests/runpybot.sh --include=smoke tests/
 
@@ -82,7 +83,7 @@ jobs:
           | tee -filepath build_log.txt
 
       - name: Tests (Windows)
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && runner.index_size != 'Gargantua'
         run: |
           build/Windows/tests/runpybot.bat `
           --config=${{ matrix.config }} --include=smoke tests/
@@ -92,7 +93,7 @@ jobs:
       - name: Publish tests results as artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: smoke-${{matrix.name}}-${{matrix.config}}
+          name: smoke-${{matrix.name}}-${{matrix.config}}-${{matrix.index_size}}
           if-no-files-found: ignore
           path: |
             report.html
