--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -66,7 +66,7 @@ jobs:
           make -j2 2>&1 |tee ../../build_log.txt
 
       - name: Tests (Linux/MacOs)
-        if: runner.os != 'Windows' && runner.index_size != 'Gargantua'
+        if: runner.os != 'Windows' && ${{ matrix.index_size }} != 'Gargantua'
         run: |
           build/${{ env.platform }}/tests/runpybot.sh --include=smoke tests/
 
@@ -83,7 +83,7 @@ jobs:
           | tee -filepath build_log.txt
 
       - name: Tests (Windows)
-        if: runner.os == 'Windows' && runner.index_size != 'Gargantua'
+        if: runner.os == 'Windows' && {{ matrix.index_size }} != 'Gargantua'
         run: |
           build/Windows/tests/runpybot.bat `
           --config=${{ matrix.config }} --include=smoke tests/
